# opentelemetry-c-replayer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  opentelemetry_c_replayer_architechture.drawio  otel-collector-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  extensions.json
.github/workflows/: ci.yml
config/: jaeger-ui.json  loki.yml  otel-collector-config.yml
config/dashboards/: jaeger.json
config/provisioning/datasources/: datasource.yml
src/: otlp_log_exporter.py  otlp_metrics_exporter.py  otlp_span_exporter.py  replayer.py
